// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications: action fetch applications failure 1`] = `
Object {
  "error": "Error fetch app",
  "type": "FETCH_APPLICATIONS_FAILURE",
}
`;

exports[`Applications: action fetch applications request 1`] = `
Object {
  "type": "FETCH_APPLICATIONS",
}
`;

exports[`Applications: action fetch applications success 1`] = `
Object {
  "applications": Array [
    Object {
      "address": "38a757f8a75453346dcb8149d52df09549f25562",
      "appName": "Simple_storage_DApp",
      "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
      "hash": "e80b681c42f831ea3c4b8db531f5e165",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps info@blockapps.net",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.0.1",
    },
    Object {
      "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
      "appName": "lottery-demo-app",
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "hash": "1e743d5cf460f28be290a8a5d8212bf9",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.1.0",
    },
    Object {
      "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
      "appName": "lottery-demo-app-meetup",
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "hash": "2598425af6cc43ea45098148e11452f0",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
      "version": "0.1.1",
    },
  ],
  "type": "FETCH_APPLICATIONS_SUCCESSFUL",
}
`;

exports[`Applications: action launch app failure 1`] = `
Object {
  "error": "Error launch app",
  "type": "LAUNCH_APP_FAILURE",
}
`;

exports[`Applications: action launch app request 1`] = `
Object {
  "address": "e80b681c42f831ea3c4b8db531f5e165",
  "type": "LAUNCH_APP",
  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
}
`;

exports[`Applications: action launch app success 1`] = `
Object {
  "address": "e80b681c42f831ea3c4b8db531f5e165",
  "type": "LAUNCH_APP_SUCCESSFUL",
}
`;

exports[`Applications: action select app reset selected app 1`] = `
Object {
  "type": "RESET_SELECTED_APP",
}
`;

exports[`Applications: action select app select app 1`] = `
Object {
  "app": Object {
    "address": "38a757f8a75453346dcb8149d52df09549f25562",
    "appName": "Simple_storage_DApp",
    "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
    "hash": "e80b681c42f831ea3c4b8db531f5e165",
    "host": "stratodev.blockapps.net",
    "maintainer": "BlockApps info@blockapps.net",
    "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
    "version": "0.0.1",
  },
  "type": "SELECT_APP",
}
`;
